--- a/index.html
+++ b/index.html
@@ -3,17 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проверка GitHub</title>
-    <link rel="stylesheet" href="style.css">
+    <title>itech905 | Портфолио</title>
+    <style>
+        :root {
+            --primary: #0070f3;
+            --dark: #1a1a1a;
+            --light: #f4f4f4;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: var(--dark);
+            background: #fff;
+        }
+
+        /* Навигация */
+        nav {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 5%;
+            background: white;
+            position: sticky;
+            top: 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            z-index: 100;
+        }
+
+        nav a { text-decoration: none; color: var(--dark); font-weight: 600; margin-left: 20px; }
+        .logo { font-weight: 800; color: var(--primary); margin: 0; }
+
+        /* Главный блок (Hero) */
+        header {
+            height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            padding: 0 20px;
+        }
+
+        header h1 { font-size: 3rem; margin-bottom: 10px; }
+        header p { font-size: 1.2rem; color: #555; max-width: 600px; }
+
+        /* Секции */
+        .container { max-width: 1000px; margin: 60px auto; padding: 0 20px; }
+        h2 { font-size: 2rem; border-left: 5px solid var(--primary); padding-left: 15px; margin-bottom: 30px; }
+
+        /* Карточки проектов */
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background: var(--light);
+            padding: 25px;
+            border-radius: 12px;
+            transition: transform 0.3s ease;
+            border: 1px solid #eee;
+        }
+
+        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .card h3 { margin-top: 0; color: var(--primary); }
+
+        /* Контакты */
+        .contact-links { display: flex; gap: 20px; font-size: 1.1rem; }
+        .contact-links a { color: var(--primary); font-weight: bold; }
+
+        footer { text-align: center; padding: 40px; background: var(--dark); color: white; margin-top: 60px; }
+
+        @media (max-width: 600px) {
+            header h1 { font-size: 2rem; }
+            nav { flex-direction: column; gap: 10px; text-align: center; }
+            nav a { margin: 0 10px; }
+        }
+    </style>
 </head>
 <body>
 
-    <div class="test-card">
-        <h1>Проверка связи! 🚀</h1>
-        <p>Если вы видите этот текст на белом фоне — работает только HTML.</p>
-        <p class="success-text">Если этот блок стал синим, а текст белым — CSS успешно подключился!</p>
-        <div class="status-badge">GitHub Pages активен</div>
+    <nav>
+        <p class="logo">itech905</p>
+        <div>
+            <a href="#projects">Проекты</a>
+            <a href="#contact">Контакты</a>
+        </div>
+    </nav>
+
+    <header>
+        <h1>Привет, я [Ваше Имя]</h1>
+        <p>Начинающий специалист, создаю свои первые проекты в вебе и осваиваю GitHub Pages.</p>
+    </header>
+
+    <div class="container" id="projects">
+        <h2>Мои работы</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Проект 1</h3>
+                <p>Краткое описание того, что вы сделали. Например: "Сайт-визитка с адаптивной версткой".</p>
+                <a href="#">Подробнее →</a>
+            </div>
+            <div class="card">
+                <h3>Проект 2</h3>
+                <p>Описание второго проекта. Можно добавить ссылки на код в GitHub.</p>
+                <a href="#">Подробнее →</a>
+            </div>
+            <div class="card">
+                <h3>Проект 3</h3>
+                <p>Здесь может быть ваша следующая крутая идея.</p>
+                <a href="#">Подробнее →</a>
+            </div>
+        </div>
     </div>
+
+    <div class="container" id="contact">
+        <h2>Связаться со мной</h2>
+        <p>Я открыт для новых предложений и общения. Пишите мне в удобное время:</p>
+        <div class="contact-links">
+            <a href="mailto:your-email@mail.com">Email</a>
+            <a href="https://t.me/your_nick">Telegram</a>
+            <a href="https://github.com/ваш-логин">GitHub</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 itech905.info | Работает на GitHub Pages</p>
+    </footer>
 
 </body>
 </html>
