--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </nav>
 
     <header>
-        <h1>Привет, я [Ваше Имя]</h1>
+        <h1>Привет, я izavod905 </h1>
         <p>Начинающий специалист, создаю свои первые проекты в вебе и осваиваю GitHub Pages.</p>
     </header>
 
