--- a/index.html
+++ b/index.html
@@ -3,137 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>itech905 | Портфолио</title>
+    <title>itech905 | Разработка и производство БПЛА</title>
     <style>
         :root {
-            --primary: #0070f3;
-            --dark: #1a1a1a;
-            --light: #f4f4f4;
+            --accent: #00d4ff;
+            --bg: #0b0e14;
+            --card-bg: #161b22;
+            --text: #c9d1d9;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: var(--dark);
-            background: #fff;
-        }
+        body { font-family: 'Segoe UI', Roboto, sans-serif; background: var(--bg); color: var(--text); margin: 0; line-height: 1.6; }
+        header { padding: 80px 5%; background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1508614589041-895b88991e3e?auto=format&fit=crop&q=80&w=1000'); background-size: cover; text-align: center; border-bottom: 2px solid var(--accent); }
+        
+        .container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
+        h1, h2 { color: #fff; text-transform: uppercase; letter-spacing: 2px; }
+        .accent-text { color: var(--accent); }
 
-        /* Навигация */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            padding: 20px 5%;
-            background: white;
-            position: sticky;
-            top: 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            z-index: 100;
-        }
+        /* Сетка услуг */
+        .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
+        .service-card { background: var(--card-bg); padding: 25px; border: 1px solid #30363d; border-radius: 8px; transition: 0.3s; }
+        .service-card:hover { border-color: var(--accent); transform: translateY(-5px); }
+        .service-card h3 { color: var(--accent); margin-top: 0; }
 
-        nav a { text-decoration: none; color: var(--dark); font-weight: 600; margin-left: 20px; }
-        .logo { font-weight: 800; color: var(--primary); margin: 0; }
-
-        /* Главный блок (Hero) */
-        header {
-            height: 60vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            padding: 0 20px;
-        }
-
-        header h1 { font-size: 3rem; margin-bottom: 10px; }
-        header p { font-size: 1.2rem; color: #555; max-width: 600px; }
-
-        /* Секции */
-        .container { max-width: 1000px; margin: 60px auto; padding: 0 20px; }
-        h2 { font-size: 2rem; border-left: 5px solid var(--primary); padding-left: 15px; margin-bottom: 30px; }
-
-        /* Карточки проектов */
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
-        .card {
-            background: var(--light);
-            padding: 25px;
-            border-radius: 12px;
-            transition: transform 0.3s ease;
-            border: 1px solid #eee;
-        }
-
-        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-        .card h3 { margin-top: 0; color: var(--primary); }
+        /* Портфолио */
+        .project-item { background: var(--card-bg); margin-bottom: 20px; padding: 20px; border-radius: 8px; display: flex; flex-wrap: wrap; gap: 20px; }
+        .project-info { flex: 1; min-width: 300px; }
+        .tag { background: #238636; color: white; padding: 3px 10px; border-radius: 12px; font-size: 0.8rem; }
 
         /* Контакты */
-        .contact-links { display: flex; gap: 20px; font-size: 1.1rem; }
-        .contact-links a { color: var(--primary); font-weight: bold; }
-
-        footer { text-align: center; padding: 40px; background: var(--dark); color: white; margin-top: 60px; }
-
-        @media (max-width: 600px) {
-            header h1 { font-size: 2rem; }
-            nav { flex-direction: column; gap: 10px; text-align: center; }
-            nav a { margin: 0 10px; }
-        }
+        .contact-section { text-align: center; background: #161b22; padding: 40px; border-radius: 12px; }
+        .btn { background: var(--accent); color: #000; padding: 12px 30px; text-decoration: none; font-weight: bold; border-radius: 5px; display: inline-block; margin-top: 20px; }
+        
+        footer { text-align: center; padding: 30px; font-size: 0.8rem; opacity: 0.6; }
     </style>
 </head>
 <body>
 
-    <nav>
-        <p class="logo">itech905</p>
-        <div>
-            <a href="#projects">Проекты</a>
-            <a href="#contact">Контакты</a>
-        </div>
-    </nav>
+<header>
+    <h1>Разработка и организация <span class="accent-text">производства БПЛА</span></h1>
+    <p>Инженерный аудит, R&D и комплексная защита объектов</p>
+    <a href="#contact" class="btn">Обсудить проект</a>
+</header>
 
-    <header>
-        <h1>Привет, я izavod905 </h1>
-        <p>Начинающий специалист, создаю свои первые проекты в вебе и осваиваю GitHub Pages.</p>
-    </header>
-
-    <div class="container" id="projects">
-        <h2>Мои работы</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>Проект 1</h3>
-                <p>Краткое описание того, что вы сделали. Например: "Сайт-визитка с адаптивной версткой".</p>
-                <a href="#">Подробнее →</a>
+<div class="container">
+    <section id="services">
+        <h2>Оказываемые услуги</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <h3>Производство</h3>
+                <p>Организация серийного производства БПЛА под ключ: от проектирования цехов до отладки линий.</p>
             </div>
-            <div class="card">
-                <h3>Проект 2</h3>
-                <p>Описание второго проекта. Можно добавить ссылки на код в GitHub.</p>
-                <a href="#">Подробнее →</a>
+            <div class="service-card">
+                <h3>Аудит и Сертификация</h3>
+                <p>Инженерный аудит конструкций и подготовка документации для сертификации БПЛА.</p>
             </div>
-            <div class="card">
-                <h3>Проект 3</h3>
-                <p>Здесь может быть ваша следующая крутая идея.</p>
-                <a href="#">Подробнее →</a>
+            <div class="service-card">
+                <h3>Защита от БПЛА</h3>
+                <p>Разработка систем противодействия и защиты объектов от несанкционированного доступа.</p>
+            </div>
+            <div class="service-card">
+                <h3>R&D Разработка</h3>
+                <p>Научно-исследовательские и опытно-конструкторские работы в сфере беспилотных систем.</p>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="container" id="contact">
-        <h2>Связаться со мной</h2>
-        <p>Я открыт для новых предложений и общения. Пишите мне в удобное время:</p>
-        <div class="contact-links">
-            <a href="mailto:your-email@mail.com">Email</a>
-            <a href="https://t.me/your_nick">Telegram</a>
-            <a href="https://github.com/ваш-логин">GitHub</a>
+    <section id="about" style="margin-top: 60px;">
+        <h2>Опыт и Навыки</h2>
+        <p>Специалист в области авиастроения и беспилотных систем с опытом реализации государственных и частных заказов.</p>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <span class="tag">CAD Проектирование</span>
+            <span class="tag">Аэродинамика</span>
+            <span class="tag">Радиоэлектроника</span>
+            <span class="tag">Управление производством</span>
         </div>
-    </div>
+    </section>
 
-    <footer>
-        <p>&copy; 2026 itech905.info | Работает на GitHub Pages</p>
-    </footer>
+    <section id="projects" style="margin-top: 60px;">
+        <h2>Выполненные проекты</h2>
+        <div class="project-item">
+            <div class="project-info">
+                <h3>Комплекс БПЛА "Название"</h3>
+                <p>Разработка планера с нуля, создание системы управления. Успешно пройдены испытания.</p>
+                <span class="tag">2024</span> <span class="tag">R&D</span>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-section" style="margin-top: 60px;">
+        <h2>Поиск партнеров и заказов</h2>
+        <p>Готов к сотрудничеству в инновационных проектах и масштабированию производства.</p>
+        <p>Email: <strong>itech905@itech905.info</strong></p>
+        <a href="https://t.me/your_nick" class="btn">Написать в Telegram</a>
+    </section>
+</div>
+
+<footer>
+    &copy; 2026 itech905.info | Конструкторское бюро и производство
+</footer>
 
 </body>
 </html>
