--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>itech905 | Конструкторское бюро БПЛА</title>
     <style>
-        /* Стиль Edinburgh: Минимализм и чистая типографика */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
             background-color: #ffffff;
@@ -16,31 +15,38 @@
         }
 
         .wrapper {
-            max-width: 760px;
-            margin: 140px auto; /* Большой отступ сверху как в теме */
+            max-width: 800px;
+            margin: 100px auto;
             padding: 0 40px;
         }
 
         header {
-            margin-bottom: 90px;
+            margin-bottom: 80px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .logo {
+            width: 60px; /* Настройте размер под ваш логотип */
+            height: auto;
         }
 
         h1 {
-            font-size: 2.8rem;
+            font-size: 2.5rem;
             font-weight: 700;
             letter-spacing: -1.5px;
-            margin: 0 0 15px 0;
+            margin: 0;
         }
 
         .description {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color: #777;
             font-weight: 300;
+            margin-top: 10px;
         }
 
-        section {
-            margin-bottom: 70px;
-        }
+        section { margin-bottom: 70px; }
 
         h2 {
             font-size: 0.75rem;
@@ -50,95 +56,81 @@
             border-bottom: 1px solid #f2f2f2;
             padding-bottom: 12px;
             margin-bottom: 35px;
-            font-weight: 600;
         }
 
-        .item {
-            margin-bottom: 45px;
+        /* Сетка для фотографий проектов */
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin-top: 20px;
+        }
+
+        .project-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            filter: grayscale(100%); /* ЧБ стиль для минимализма */
+            transition: 0.4s;
+            border: 1px solid #eee;
+        }
+
+        .project-card img:hover {
+            filter: grayscale(0%);
         }
 
         .item-title {
             display: block;
-            font-size: 1.25rem;
-            font-weight: 600;
-            margin-bottom: 8px;
-            color: #000;
-        }
-
-        .item-text {
-            color: #444;
-            font-size: 1.05rem;
-        }
-
-        .contact-email {
             font-size: 1.1rem;
-            color: #000;
-            text-decoration: none;
-            border-bottom: 1px solid #000;
-            transition: opacity 0.2s;
+            font-weight: 600;
+            margin: 15px 0 5px 0;
         }
 
-        .contact-email:hover {
-            opacity: 0.5;
-        }
+        .item-text { color: #555; font-size: 0.95rem; }
 
-        footer {
-            margin-top: 150px;
-            font-size: 0.8rem;
-            color: #ccc;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
+        footer { margin-top: 100px; font-size: 0.75rem; color: #ccc; text-transform: uppercase; }
     </style>
 </head>
 <body>
 
     <div class="wrapper">
         <header>
-            <h1>itech905</h1>
-            <p class="description">Разработка, сертификация и организация производства БПЛА.</p>
+            <img src="images/logo.png" alt="itech905" class="logo">
+            <div>
+                <h1>itech905</h1>
+                <p class="description">Инженерные решения в сфере БПЛА</p>
+            </div>
         </header>
 
         <section id="services">
             <h2>Оказываемые услуги</h2>
-            
             <div class="item">
                 <span class="item-title">Организация производства БПЛА</span>
-                <p class="item-text">Проектирование производственных площадок и запуск серийных линий сборки «под ключ».</p>
+                <p class="item-text">Проектирование и запуск серийных линий сборки.</p>
             </div>
-
             <div class="item">
-                <span class="item-title">Сертификация и инженерный аудит</span>
-                <p class="item-text">Полный цикл сопровождения: от анализа конструкторской документации до получения сертификатов.</p>
-            </div>
-
-            <div class="item">
-                <span class="item-title">R&D разработка</span>
-                <p class="item-text">Научно-исследовательские работы по созданию перспективных беспилотных систем и целевых нагрузок.</p>
+                <span class="item-title">Сертификация и аудит</span>
+                <p class="item-text">Сопровождение и техническая экспертиза.</p>
             </div>
         </section>
 
-        <section id="portfolio">
-            <h2>Портфолио</h2>
-            <div class="item">
-                <span class="item-title">Выполненные проекты</span>
-                <p class="item-text">Опыт реализации проектов в области авиастроения, систем управления и защиты объектов.</p>
-            </div>
-            <div class="item">
-                <span class="item-title">Навыки</span>
-                <p class="item-text">CAD/CAM, аэродинамическое моделирование, управление производственными процессами.</p>
+        <section id="projects">
+            <h2>Выполненные проекты</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <img src="images/project1.jpg" alt="Проект 1">
+                    <span class="item-title">R&D Разработка</span>
+                    <p class="item-text">Создание опытного образца системы управления.</p>
+                </div>
+                <div class="project-card">
+                    <img src="images/project2.jpg" alt="Проект 2">
+                    <span class="item-title">Защита объектов</span>
+                    <p class="item-text">Внедрение систем противодействия БПЛА.</p>
+                </div>
             </div>
         </section>
 
-        <section id="contact">
-            <h2>Сотрудничество</h2>
-            <p class="item-text">Для запроса портфолио или обсуждения проекта:</p>
-            <a href="mailto:itech905@itech905.info" class="contact-email">itech905@itech905.info</a>
-        </section>
-
-        <footer>
-            &copy; 2026 itech905.info
-        </footer>
+        <footer>&copy; 2026 itech905.info</footer>
     </div>
 
 </body>
