--- a/index.html
+++ b/index.html
@@ -59,5 +59,29 @@
     <footer>
         <p>&copy; 2026 // CONNECT: <a href="#">GITHUB</a> | <a href="#">LINKEDIN</a></p>
     </footer>
+    <script>
+    const textElement = document.querySelector('h1');
+    const finalString = textElement.innerText;
+    const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%&*";
+    let iterations = 0;
+
+    const interval = setInterval(() => {
+        textElement.innerText = finalString
+            .split("")
+            .map((letter, index) => {
+                if(index < iterations) {
+                    return finalString[index];
+                }
+                return characters[Math.floor(Math.random() * 26)];
+            })
+            .join("");
+
+        if(iterations >= finalString.length) {
+            clearInterval(interval);
+        }
+
+        iterations += 1 / 3; // Speed of "decryption"
+    }, 30);
+</script>
 </body>
 </html>
