--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <h1>ENGINEERING THE FUTURE.</h1>
         <p class="subtitle">Electronics | Programming | UAV | Communications</p>
     </header>
+    <section class="hero-image-container">
+    <img src="your-photo-name.png" alt="UAV Flight Controller Schematic" class="tech-photo">
+</section>
 
     <section id="projects">
         <h2>[PROJECT_LOGS]</h2>
