--- a/index.html
+++ b/index.html
@@ -24,25 +24,57 @@
     </header>
 
     <section id="projects">
-        <h2>[PROJECT_LOGS]</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>UAV Flight Controller</h3>
-                <p>Custom PCB design for long-range telemetry and autonomous navigation.</p>
-                <span class="tag">Electronics</span>
+    <h2>[PROJECT_LOGS]</h2>
+    <div class="grid">
+        <div class="card">
+            <div class="case-header">
+                <h3>120 kg Cargo UAV</h3>
+                <span class="tag">Heavy Lift / Aerospace</span>
             </div>
-            <div class="card">
-                <h3>RF Transceiver Module</h3>
-                <p>High-frequency communication circuitry for secure data links.</p>
-                <span class="tag">RF Design</span>
-            </div>
-            <div class="card">
-                <h3>Embedded Neural Net</h3>
-                <p>Lightweight C++ implementation for edge-computing sensors.</p>
-                <span class="tag">Programming</span>
+            <p>Разработка платформы для транспортировки тяжелых грузов с интегрированной системой стабилизации.</p>
+            <div class="image-pair">
+                <img src="cargo_uav_1.jpg" alt="Cargo UAV Build" class="project-img">
+                <img src="cargo_uav_2.jpg" alt="Cargo UAV Flight" class="project-img">
             </div>
         </div>
-    </section>
+
+        <div class="card">
+            <div class="case-header">
+                <h3>Autonomous Ground Control Station</h3>
+                <span class="tag">Systems / UAV</span>
+            </div>
+            <p>Наземная станция управления с автоматизированным развертыванием и защищенными каналами связи.</p>
+            <div class="image-pair">
+                <img src="gcs_1.jpg" alt="GCS Interior" class="project-img">
+                <img src="gcs_2.jpg" alt="GCS Field Test" class="project-img">
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="case-header">
+                <h3>Video Analytics & Target Shooting</h3>
+                <span class="tag">AI / Surveillance</span>
+            </div>
+            <p>Система анализа видеопотока в реальном времени для идентификации целей и баллистической аналитики.</p>
+            <div class="image-pair">
+                <img src="analytics_1.jpg" alt="Target Detection" class="project-img">
+                <img src="analytics_2.jpg" alt="UI Dashboard" class="project-img">
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="case-header">
+                <h3>SIM Card Control Module</h3>
+                <span class="tag">Circuitry / Comms</span>
+            </div>
+            <p>Миниатюрный модуль управления SIM-картами для обеспечения резервных каналов связи UAV.</p>
+            <div class="image-pair">
+                <img src="sim_mod_1.jpg" alt="PCB Design" class="project-img">
+                <img src="sim_mod_2.jpg" alt="Module Prototype" class="project-img">
+            </div>
+        </div>
+    </div>
+</section>
 
     <section id="skills">
         <h2>[CORE_COMPETENCIES]</h2>
