--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <p>Разработка платформы для транспортировки тяжелых грузов с интегрированной системой стабилизации.</p>
             <div class="image-pair">
-                <img src="cargo_uav_1.jpg" alt="Cargo UAV Build" class="project-img">
+                <img src="./images/cargo_uav_1.jpg" alt="Cargo UAV Build" class="project-img">
                 <img src="cargo_uav_2.jpg" alt="Cargo UAV Flight" class="project-img">
             </div>
         </div>
