--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <p>Наземная станция управления с автоматизированным развертыванием и защищенными каналами связи.</p>
             <div class="image-pair">
-                <img src="/image/gcs_1.jpg" alt="GCS Interior" class="project-img">
-                <img src="/image/gcs_2.jpg" alt="GCS Field Test" class="project-img">
+                <img src="/images/gcs_1.jpg" alt="GCS Interior" class="project-img">
+                <img src="/images/gcs_2.jpg" alt="GCS Field Test" class="project-img">
             </div>
         </div>
 
@@ -57,8 +57,8 @@
             </div>
             <p>Система анализа видеопотока в реальном времени для идентификации целей и баллистической аналитики.</p>
             <div class="image-pair">
-                <img src="/image/analytics_1.jpg" alt="Target Detection" class="project-img">
-                <img src="/image/analytics_2.jpg" alt="UI Dashboard" class="project-img">
+                <img src="/images/analytics_1.jpg" alt="Target Detection" class="project-img">
+                <img src="/images/analytics_2.jpg" alt="UI Dashboard" class="project-img">
             </div>
         </div>
 
@@ -69,8 +69,8 @@
             </div>
             <p>Миниатюрный модуль управления SIM-картами для обеспечения резервных каналов связи UAV.</p>
             <div class="image-pair">
-                <img src="/image/sim_mod_1.jpg" alt="PCB Design" class="project-img">
-                <img src="/image/sim_mod_2.jpg" alt="Module Prototype" class="project-img">
+                <img src="/images/sim_mod_1.jpg" alt="PCB Design" class="project-img">
+                <img src="/images/sim_mod_2.jpg" alt="Module Prototype" class="project-img">
             </div>
         </div>
     </div>
