--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
             </div>
         </div>
 
+      <div class="card">
+            <div class="case-header">
+                <h3>Rocket-Shaped VTOL UAV</h3>
+                <span class="tag"> Aerodynamics / VTOL </span>
+            </div>
+            <p>Экспериментальный БПЛА вертикального взлета с переходом в горизонтальный полет для достижения высоких скоростей.</p>
+            <div class="image-pair">
+                <img src="/images/rocket_1.jpg" alt="Target Detection" class="project-img">
+                <img src="/images/rocket_2.jpg" alt="UI Dashboard" class="project-img">
+            </div>
+        </div>
+
         <div class="card">
             <div class="case-header">
                 <h3>SIM Card Control Module</h3>
