--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 // CONNECT: <a href="#">GITHUB</a> | <a href="#">LINKEDIN</a></p>
+        <p>&copy; 2026 // CONNECT: <a href="#">LINKEDIN</a></p>
     </footer>
     <script>
     const textElement = document.querySelector('h1');
