--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 // CONNECT: <a href="www.linkedin.com/in/илья-к-5b47b038b" target="_blank">LINKEDIN</a>
+        <p>&copy; 2026 // CONNECT: <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a>
     </footer>
     <script>
     const textElement = document.querySelector('h1');
