--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="grid">
         <div class="card">
             <div class="case-header">
-                <h3>120 kg Cargo UAV</h3>
+                <h3>1Cargo UAV 120kg</h3>
                 <span class="tag">Heavy Lift / Aerospace</span>
             </div>
-            <p>Разработка платформы для транспортировки тяжелых грузов с интегрированной системой стабилизации.</p>
+            <p>Platforms for transporting heavy loads with an integrated stabilization system.</p>
             <div class="image-pair">
                 <img src="/images/cargo_uav_1.jpg" alt="Cargo UAV Build" class="project-img">
                 <img src="/images/cargo_uav_2.jpg" alt="Cargo UAV Flight" class="project-img">
@@ -43,7 +43,7 @@
                 <h3>Autonomous Ground Control Station</h3>
                 <span class="tag">Systems / UAV</span>
             </div>
-            <p>Наземная станция управления с автоматизированным развертыванием и защищенными каналами связи.</p>
+            <p>Ground Control Station with automated deployment and secure communication channels.</p>
             <div class="image-pair">
                 <img src="/images/gcs_1.jpg" alt="GCS Interior" class="project-img">
                 <img src="/images/gcs_2.jpg" alt="GCS Field Test" class="project-img">
@@ -55,7 +55,7 @@
                 <h3>Video Analytics & Target Shooting</h3>
                 <span class="tag">AI / Surveillance</span>
             </div>
-            <p>Система анализа видеопотока в реальном времени для идентификации целей и баллистической аналитики.</p>
+            <p>Real-time video stream analysis system for target identification and ballistic analytics.</p>
             <div class="image-pair">
                 <img src="/images/analytics_1.jpg" alt="Target Detection" class="project-img">
                 <img src="/images/analytics_2.jpg" alt="UI Dashboard" class="project-img">
@@ -67,7 +67,7 @@
                 <h3>Rocket-Shaped VTOL UAV</h3>
                 <span class="tag"> Aerodynamics / VTOL </span>
             </div>
-            <p>Экспериментальный БПЛА вертикального взлета с переходом в горизонтальный полет для достижения высоких скоростей.</p>
+            <p>Experimental UAV with vertical takeoff and transition to horizontal flight.</p>
             <div class="image-pair">
                 <img src="/images/rocket_1.jpg" alt="Target Detection" class="project-img">
                 <img src="/images/rocket_2.jpg" alt="UI Dashboard" class="project-img">
@@ -79,7 +79,7 @@
                 <h3>SIM Card Control Module</h3>
                 <span class="tag">Circuitry / Comms</span>
             </div>
-            <p>Миниатюрный модуль управления SIM-картами для обеспечения резервных каналов связи UAV.</p>
+            <p>A miniature 4G cellular control module to provide a backup UAV communications channel.</p>
             <div class="image-pair">
                 <img src="/images/sim_mod_1.jpg" alt="PCB Design" class="project-img">
                 <img src="/images/sim_mod_2.jpg" alt="Module Prototype" class="project-img">
