--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="card">
             <div class="case-header">
-                <h3>Video Analytics & Target Shooting</h3>
+                <h3>Analytics for target shooting</h3>
                 <span class="tag">AI / Surveillance</span>
             </div>
             <p>Real-time video stream analysis system for target identification and ballistic analytics.</p>
