--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <h1>I K </h1>
-        <p class="subtitle">Electronics | Programming | UAV | Communications</p>
+        <p class="subtitle">Electronics | Programming | UAV | R&D Management | Wireless Comms</p>
     </header>
 
     <section id="projects">
