--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="grid">
         <div class="card">
             <div class="case-header">
-                <h3>1Cargo UAV 120kg</h3>
+                <h3>Cargo UAV 120kg</h3>
                 <span class="tag">Heavy Lift / Aerospace</span>
             </div>
             <p>Platforms for transporting heavy loads with an integrated stabilization system.</p>
