--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
         <h2>[CORE_COMPETENCIES]</h2>
         <div class="skills-container">
             <ul>
-                <li><span>></span> C / C++ / Python</li>
-                <li><span>></span> FPGA & RTL Design</li>
-                <li><span>></span> KiCad / Altium</li>
-                <li><span>></span> SDR & Signal Processing</li>
+                <li><span>></span> Unmanned Systems Architect & R&D Lead</li>
+                <li><span>></span> RF & Wireless Engineering</li>
+                <li><span>></span> Team Leadership & Resource Management</li>
+                <li><span>></span> Production Frameworks</li>
+                <li><span>></span> Autopilot & Onboard Systems Integration</li>
             </ul>
         </div>
     </section>
