--- a/index.html
+++ b/index.html
@@ -89,17 +89,32 @@
 </section>
 
     <section id="skills">
-        <h2>[CORE_COMPETENCIES]</h2>
-        <div class="skills-container">
+    <div class="skills-services-grid">
+        <div class="skills-column">
+            <h2>[CORE_COMPETENCIES]</h2>
             <ul>
                 <li><span>></span> Unmanned Systems Architect & R&D Lead</li>
-                <li><span>></span> RF & Wireless Engineering</li>
+                <li><span>></span> Systems Architecture (Heavy-Lift & VTOL)</li>
+                <li><span>></span> RF & Wireless Engineering (LoRa, ELRS)</li>
                 <li><span>></span> Team Leadership & Resource Management</li>
-                <li><span>></span> Production Frameworks</li>
+                <li><span>></span> Production Frameworks & Quality Control</li>
                 <li><span>></span> Autopilot & Onboard Systems Integration</li>
             </ul>
         </div>
-    </section>
+
+        <div class="services-column">
+            <h2>[SOLUTIONS_&_SERVICES]</h2>
+            <ul>
+                <li><span>></span> Full-Cycle Unmanned Systems Development</li>
+                <li><span>></span> R&D Management & Product Strategy</li>
+                <li><span>></span> UAV Production Setup & Optimization</li>
+                <li><span>></span> RF Systems & Secure Comms Architecture</li>
+                <li><span>></span> Technical Team Assembly & Leadership</li>
+                <li><span>></span> Autonomous Navigation & Autopilot Tuning</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2026 // CONNECT: <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a>
