--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 </section>
 
     <footer>
-        <p>&copy; 2026 // CONNECT: <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a>
-    </footer>
+    <p>
+        &copy; 2026 // 
+        CONNECT: <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a> • 
+        <a href="mailto:your-email@example.com">EMAIL</a>
+    </p>
+</footer>
     <script>
     const textElement = document.querySelector('h1');
     const finalString = textElement.innerText;
