--- a/index.html
+++ b/index.html
@@ -116,11 +116,15 @@
     </div>
 </section>
 
-    <footer>
+   <footer>
     <p>
         &copy; 2026 // 
-        CONNECT: <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a> • 
-        <a href="mailto:your-email@example.com">EMAIL</a>
+        CONNECT: 
+        <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a> • 
+        <a href="mailto:your-email@example.com" class="email-link">
+            <span class="email-text">your-email@example.com</span>
+            EMAIL
+        </a>
     </p>
 </footer>
     <script>
