--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         &copy; 2026 // 
         CONNECT: 
         <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a> • 
-        <a href="mailto:your-email@example.com" class="email-link">
-            <span class="email-text">your-email@example.com</span>
+        <a href="7359828@gmail.com" class="email-link">
+            <span class="email-text">7359828@gmail.com</span>
             EMAIL
         </a>
     </p>
