--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <p>
         &copy; 2026 // 
         CONNECT: 
-        <a href="https://www.linkedin.com/in/илья-к-5b47b038b/" target="_blank">LINKEDIN</a> • 
+        <a href="https://www.linkedin.com/in/ilya-k-5b47b038b/" target="_blank">LINKEDIN</a> • 
         <a href="mailto:7359828@gmail.com" class="email-link">
             <span class="email-text">7359828@gmail.com</span>
             EMAIL
